# lutron_radiora_classic_ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/radiora_classic/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  event.py  light.py  manifest.json  models.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/radiora_classic/pyradiora_classic/: __init__.py  client.py  client_sync.py  commands.py  const.py  exceptions.py  messages.py  protocol.py  transport.py  transport_sync.py
custom_components/radiora_classic/translations/: en.json
docs/design_specs/: phase1_lutron_radiora_classic_Architecture.md  phase2_config_flow.md  phase3_coordinator_client.md  phase4_entity_platforms.md  phase5_diagnostics_services.md  phase6_file_skeleton.md  phase7_testing.md
tests/: conftest.py  test_button.py  test_client.py  test_config_flow.py  test_coordinator.py  test_csv.py  test_diagnostics.py  test_event.py  test_init.py  test_light.py  test_sensor.py  test_switch.py
