[project]
name = "lutron-radiora-classic-ha"
version = "1.0.0"
description = "Home Assistant HACS integration for Lutron RadioRA Classic"
requires-python = ">=3.14.2"
license = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "homeassistant>=2026.6,<2027.0",
    "pyserial>=3.5",
    "pyserial-asyncio-fast>=0.11",
    "ruff>=0.5",
    "mypy>=1.10",
]
dev-full = [
    "lutron-radiora-classic-ha[dev]",
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_ha_runtime: test requires full Home Assistant runtime (Linux only)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SLF"]

[tool.mypy]
python_version = "3.12"
strict = true
